Update Assignments and Course Sessions

--- a/assignments/index.qmd
+++ b/assignments/index.qmd
@@ -7,12 +7,12 @@ editor: visual
 
 ## 
 
-| Assignment                    | Undergraduate | Masters | Doctoral | Due Date    |
-|----------------------|-------------|---------|----------|------------------|
-| Exploring an Intersection     | 20%           | 10%     | 10%      | February 12 |
-| Local Housing Market Analysis | 20%           | 10%     |          | March 19    |
-| Housing Needs Analysis        | 20%           | 10%     |          | April 9     |
-| Housing Policy Analysis       | 30%           | 10%     |          | May 7       |
-| Housing Platform              |               | 40%     |          | May 12      |
-| Term Paper                    |               |         | 80%      | May 12      |
-| Discussion Facilitation       | 10%           | 10%     | 10%      | Varies      |
+| Assignment                                       | Undergraduate | Masters | Doctoral | Due Date    |
+|---------------|---------------|---------------|---------------|---------------|
+| [Exploring an Intersection](01_intersection.qmd) | 20%           | 10%     | 10%      | February 12 |
+| [Local Housing Market Analysis](02_analysis.qmd) | 20%           | 10%     |          | March 19    |
+| [Housing Needs Analysis](03_needs.qmd)           | 20%           | 10%     |          | April 9     |
+| [Housing Policy Analysis](04_policy.qmd)         | 30%           | 10%     |          | May 7       |
+| [Housing Platform](05_proposal.qmd)              |               | 50%     |          | May 12      |
+| [Term Paper](07_term.qmd)                        |               |         | 80%      | May 12      |
+| [Discussion Facilitation](06_facilitation.qmd)   | 10%           | 10%     | 10%      | Varies      |
