--- a/schedule/index.qmd
+++ b/schedule/index.qmd
@@ -6,21 +6,21 @@ editor: visual
 
 Our course schedule is subject to change over the course of semester - please check here often for updates.
 
-| Week    | Dates     |           | Description                                    |
-|------------|----------|------------|----------------------------------------|
-| Week 1  | 1/18/23   |           | Course Introduction                            |
-| Week 2  | 1/23/23   | 1/25/23   | How Well Are we Housed?                        |
-| Week 3  | 1/30/23   | 2/1/23    | Government Intervention in Housing             |
-| Week 4  | 2/6/23    | 2/8/23    | Homeownership                                  |
-| Week 5  | 2/13/23   | 2/15/23   | Public Housing                                 |
-| Week 6  | 2/20/23   | 2/22/23   | Federally Assisted Housing                     |
-| Week 7  | 2/27/23   | 3/1/23    | Housing Production Strategies                  |
-| Week 8  | 3/6/23    | 3/8/23    | The Enduring Significance of Neighborhoods     |
-| Week 9  | 3/13/23   | 3/15/23   | Spring Break                                   |
-| Week 10 | 3/20/23   | 3/22/23   | Regulating Housing Environments                |
-| Week 11 | 3/27/23   | 3/29/23   | Eviction                                       |
-| Week 12 | 4/3/23    | 4/5/23    | Neighborhood Change                            |
-| Week 13 | 4/10/23   | 4/12/23   | Housing Market Discrimination and Fair Housing |
-| Week 14 | 4/17/23   | 4/19/23   | Housing Special Populations                    |
-| Week 15 | 4/24/23   | 4/26/23   | Independent Work and Advising                  |
-| Week 16 | 5/1/23    | 5/3/23    | Class Presentations and Course Wrap-Up         |
+| Week    | Dates   |         | Description                                    |
+|---------|---------|---------|------------------------------------------------|
+| Week 1  | 1/18/23 |         | [Course Introduction](01_introduction.qmd)                        |
+| Week 2  | 1/23/23 | 1/25/23 | [How Well Are we Housed?](02_housed.qmd)                        |
+| Week 3  | 1/30/23 | 2/1/23  | [Government Intervention in Housing](03_government.qmd)             |
+| Week 4  | 2/6/23  | 2/8/23  | [Homeownership](04_homeownership.qmd)                                  |
+| Week 5  | 2/13/23 | 2/15/23 | [Public Housing](05_publichousing.qmd)                                 |
+| Week 6  | 2/20/23 | 2/22/23 | [Federally Assisted Housing](06_fedassisted.qmd)                     |
+| Week 7  | 2/27/23 | 3/1/23  | [Housing Production Strategies](07_production.qmd)                  |
+| Week 8  | 3/6/23  | 3/8/23  | [The Enduring Significance of Neighborhoods](08_neighborhoods.qmd)     |
+| Week 9  | 3/13/23 | 3/15/23 | [Spring Break](09_break.qmd)                                   |
+| Week 10 | 3/20/23 | 3/22/23 | [Regulating Housing Environments](10_hsgenv.qmd)                |
+| Week 11 | 3/27/23 | 3/29/23 | [Eviction](11_eviction.qmd)                                       |
+| Week 12 | 4/3/23  | 4/5/23  | [Neighborhood Change](12_neighborhoodchg.qmd)                            |
+| Week 13 | 4/10/23 | 4/12/23 | [Housing Market Discrimination and Fair Housing](13_fairhousing.qmd) |
+| Week 14 | 4/17/23 | 4/19/23 | [Housing Special Populations](14_specialpop.qmd)                    |
+| Week 15 | 4/24/23 | 4/26/23 | [Independent Work and Advising](15_indwork.qmd)                  |
+| Week 16 | 5/1/23  | 5/3/23  | [Class Presentations and Course Wrap-Up](16_wrapup.qmd)         |
