--- a/assignments/01_intersection.qmd
+++ b/assignments/01_intersection.qmd
@@ -5,3 +5,44 @@ toc: false
 editor: visual
 ---
 
+## Assignment Goals
+For this assignment, you will critically engage with a topical issue of your choice and its intersection with the larger phenomena associated with housing and urban policy. By the end of this assignment you will understand the phenomena of your intersection through its related theory, strategies for empirical investigation, and policy implications
+
+## Assignment
+For this assignment, you will investigate the intersection between housing and a topic or area of your choosing. A few examples of some potential intersections you might explore are:
+
+- The Impact of COVID-19 on renters
+- Housing affordability for college graduates
+- Fair housing enforcement following the housing crisis
+- Relationship between housing affordability and eviction
+- Capital investment in housing in “shrinking” cities
+-	Design of green low-income housing
+-	Impact of capital markets on community development financial institutions (CDFIs)
+-	Differential impacts of foreclosures on race, ethnicity, or income group
+
+This assignment is (purposefully) left quite open. You have a lot of flexibility in defining an area of your interest and then exploring its intersection with our course focus on housing - of course, this openness makes your task more challenging! Your challenge is to identify an intersection that strikes a balance between being sufficiently specific that you can adequately reflect upon it, without being so specific that you are unable to identify supporting evidence for your exposition. As you are researching potential intersections, please bring ideas and questions to our class. Your professor and fellow students are an important resource for appropriately scoping your assignment. Along those lines, proactively working on your assignment will greatly increase the odds that you will have sufficient time to explore and research your intersection thoroughly.
+
+## The Deliverable
+
+Your outputs should consist of the following:
+
+1.	A reflective essay (no more than 5 single-spaced pages) that describes your intersection. The paper should describe and discuss the following dimensions of your intersection:
+
+a.	What ideas or theoretical concepts describe the two things that you are looking at? What ideas or theoretical concepts describe their intersection? 
+
+For example, if you were exploring differential impacts of foreclosures on African-American households, you may wish to reference some of the historical ways in social ecology theories influenced federal underwriting standards. Likewise, you might want to also discuss the drive towards market completion as it relates to the extending of credit to populations who have historically been underserved by credit markets.
+
+b.	What are the policy implications for your intersection? How have policies historically engaged with this issue (if historical policies exist)? How do current policies engage with this issue (if they exist)? What are your thoughts about the direction that policy may / should go in regards to your issue?
+
+Thinking about the intersection of African-American communities and the differential impacts of foreclosure, you might discuss racial differentials in the capacity to pass on wealth intergenerationally through assets such as the home. You might also examine Federal, state, or local policies that target minority homeowners at risk of foreclosure.
+
+## Tips for a Successful Assignment
+
+- Write clearly and succinctly, paying attention to spelling, grammar, and the organization of information.
+- Provide a clear and logical structure to your paper using descriptive section titles to organize information.
+- The judicious use of maps, photographs, charts, and tables should be considered as a means of conveying information.
+- Come see me early for help in identifying resources, readings, or for thoughts on how you may wish to approach the description of your intersection.
+
+## Assignment Submission
+
+Please submit your paper electronically via Canvas.
