--- a/assignments/07_term.qmd
+++ b/assignments/07_term.qmd
@@ -19,12 +19,12 @@ Your final term paper should be between 8,000 and 10,000 words in length (exclud
 
 ### Assignment Submission 
 
--    Term Paper Proposal: submit via Box Assignment Dropbox
+-    Term Paper Proposal: submit via email to Professor Greenlee
 
--    Extended Abstract and Outline: submit via Box Assignment Dropbox
+-    Extended Abstract and Outline: submit via email to Professor Greenlee
 
--    Literature Review: submit via Box Assignment Dropbox
+-    Literature Review: submit via email to Professor Greenlee
 
--    Complete Term Paper: submit via Box Assignment Dropbox
+-    Complete Term Paper: submit via email to Professor Greenlee
 
 \
