--- a/syllabus/index.qmd
+++ b/syllabus/index.qmd
@@ -43,7 +43,7 @@ Please purchase a copy of this book from your preferred bookseller.
 This course requires your engagement both within and outside of our seminar sessions. Grading criteria include contribution to the course environment, quality of writing, depth of analysis, and thoughtful engagement with the subject matter and each other. You work will be graded on a 100-point scale:
 
 | Letter Grade | Point Range    | Description                                               |
-|---------------|---------------|-------------------------------------------|
+|----------------|----------------|----------------------------------------|
 | A            | \> 90 Points   | Outstanding work, ready for publication and dissemination |
 | B            | 80 - 89 Points | Good work, work needs minor revision                      |
 | C            | 70 - 79 Points | Work needs major revision                                 |
@@ -54,13 +54,21 @@ Consistent contributions to discussion, thoughtful engagement with course materi
 
 ### Assignments
 
-You can find more information on grade elements on the [Assignments](assignments/index.qmd) page.
+You can find more information on grade elements on the [Assignments](../assignments/index.qmd) page.
 
 All assignments should be submitted via [Canvas](https://canvas.illinois.edu) as a PDF file (unless otherwise noted in the assignment). Late work will be automatically graded down by 5 points per 24-hour period your assignment is late, and will only be accepted if you have made arrangements with me prior to the assignment due date.
 
 ### Attendance
 
 The learning environment in this seminar depends upon your participation. Full participation is expected for all course sessions. For each course session that you are absent from (excluding excused absences), 2 percent will be deducted from your final course grade. Excused absences will be granted on a case-by-case basis, but must be approved by me prior to the course session which you are absent from.
+
+For those students who need to miss class due to a religious observance, please complete the [Request for Accommodation for Religious Observances](https://odos.illinois.edu/community-of-care/resources/students/religious-observances/) form should any instructors require an absence letter in order to manage the absence. In order to best facilitate planning and communication between students and faculty, we request that students make requests for absence letters as early as possible in the semester in which the request applies.
+
+For more information on attendance policy as described in the University of Illinois Student Code, please see Sections [1-501](https://studentcode.illinois.edu/article1/part5/1-501/) and [1-502](https://studentcode.illinois.edu/article1/part5/1-502/).
+
+### Accomodations for Students with Disabilities
+
+If you need accommodations for any sort of disability, please make an office hours appointment so we can discuss your needs and ways I can support your learning. To ensure that disability-related concerns are properly addressed, students who require assistance to participate in this class should contact [Disability Resources and Educational Services (DRES)](https://www.disability.illinois.edu). DRES provides students with academic accommodations, access, and support services. To contact DRES you may visit 1207 S. Oak St., Champaign, call 333-4603 (V/TDD), or e-mail [disability@illinois.edu](mailto: disability@illinois.edu).
 
 ## Honor Code and Learning Environment
 
@@ -77,3 +85,20 @@ Following University policy, all students are required to engage in appropriate 
 ### Staying in Touch
 
 As you learn and face challenges this semester, I need you to communicate with me, either during our course sessions or individually. You can schedule an appointment with me at your convenience via my [Calendly page](%7B%7B%3C%20var%20instructor.calendly_url%20%3E%7D%7D). I promise to listen, to be a resource, and to help in any way that I can - if I can't help you, I will find someone who can.
+
+### Sexual Misconduct Reporting Obligation
+
+The University of Illinois is committed to combating sexual misconduct. Faculty and staff members are required to report any instances of sexual misconduct to the University’s Title IX and Disability Office. In turn, an individual with the Title IX and Disability Office will provide information about rights and options, including accommodations, support services, the campus disciplinary process, and law enforcement options. 
+
+A list of the designated University employees who, as counselors, confidential advisors, and medical professionals, do not have this reporting responsibility and can maintain confidentiality, can be found [here](wecare.illinois.edu/resources/students/#confidential). Other information about resources and reporting is available at [wecare.illinois.edu](wecare.illinois.edu).
+
+### Mental Health
+
+The University of Illinois offers a variety of confidential services including individual and group counseling, crisis intervention, psychiatric services, and specialized screenings which are covered through the Student Health Fee. If you or someone you know experiences mental health concerns, please contact or visit any of the University’s resources provided below. Getting help is a smart and courageous thing to do for yourself and for those who care about you. 
+
+-  [Counseling Center](https://counselingcenter.illinois.edu/): (217) 333-3704
+-  [McKinley Health Center](https://mckinley.illinois.edu): (217) 333-2700 
+-  [988 Suicide and Crisis Lifeline](https://988lifeline.org/?utm_source=google&utm_medium=web&utm_campaign=onebox): (800) 273-8255 
+- [Rosecrance Crisis Line](https://rosecrance.org/central-illinois/) (217) 359-4141
+
+If you are in immediate danger, call 911.
