--- a/schedule/03_government.qmd
+++ b/schedule/03_government.qmd
@@ -11,6 +11,16 @@ editor: visual
 
 ## Readings
 
+Bauer, Catherine, Social Questions in Housing and Community Planning [{{< fa arrow-up-right-from-square >}}](https://uofi.box.com/s/exxtmliq9ku3mt582js7p886ua0n5duc)
+
+President Biden Announces New Actions to Ease the Burden of Housing Costs [{{< fa arrow-up-right-from-square >}}](https://uofi.box.com/s/r876jn31g794gtgt3uyt2cueii1gyh2h)
+
+Coates, Ta-Nehisi, The Ghetto is Public Policy [{{< fa arrow-up-right-from-square >}}](https://uofi.box.com/s/0bm10cpkn8hqrmykc24b2jyfylugclf7)
+
+America's Last Affordable Housing is Under Threat
+
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/9DQa3Ajhzv8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 ## Slides
 
 ## Additional Resources
